# docs/swagger.json
@@ -83,7 +83,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/views.TokensView"
+                            "$ref": "#/definitions/views.LoginView"
                         }
                     },
                     "400": {
@@ -1034,6 +1034,17 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "views.LoginView": {
+            "type": "object",
+            "properties": {
+                "client": {
+                    "$ref": "#/definitions/views.ClientView"
+                },
+                "tokens": {
+                    "$ref": "#/definitions/views.TokensView"
                 }
             }
         },
