# internal/views/auth.go
@@ -4,3 +4,8 @@ type TokensView struct {
 	AccessToken  string `json:"access_token,omitempty"`
 	RefreshToken string `json:"refresh_token,omitempty"`
 }
+
+type LoginView struct {
+	Client ClientView
+	Tokens TokensView
+}
